Fixing python scheduler, working 2 actor film resolver